# pycubicspline

./: pyproject.toml
